# advent-of-code-2018

./: .gitignore  Cargo.toml  new_day.sh
day-1-chronal-calibration/: Cargo.toml
day-1-chronal-calibration/src/: lib.rs  main.rs
day-1-chronal-calibration/tests/: tests.rs
day-10-the-stars-align/: Cargo.toml
day-10-the-stars-align/src/: lib.rs  main.rs  star.rs  starfield.rs
day-10-the-stars-align/tests/: tests.rs
day-11-chronal-charge/: Cargo.toml
day-11-chronal-charge/src/: fuelcellgrid.rs  lib.rs  main.rs
day-11-chronal-charge/tests/: tests.rs
day-12-subterranean-sustainability/: Cargo.toml
day-12-subterranean-sustainability/src/: lib.rs  main.rs  pot_row.rs
day-12-subterranean-sustainability/tests/: tests.rs
day-13-mine-cart-madness/: Cargo.toml
day-13-mine-cart-madness/src/: cart.rs  lib.rs  main.rs
day-13-mine-cart-madness/tests/: tests.rs
day-14-chocolate-charts/: Cargo.toml
day-14-chocolate-charts/src/: lib.rs  main.rs
day-14-chocolate-charts/tests/: tests.rs
day-2-inventory-management-system/: Cargo.toml
day-2-inventory-management-system/src/: lib.rs  main.rs
day-2-inventory-management-system/tests/: tests.rs
day-3-no-matter-how-you-slice-it/: Cargo.toml
day-3-no-matter-how-you-slice-it/src/: claim.rs  fabric.rs  lib.rs  main.rs
day-4-repose-record/: Cargo.toml
day-4-repose-record/src/: datetime.rs  (+4 more)
day-5-alchemical-reduction/: Cargo.toml
day-6-chronal-coordinates/: Cargo.toml
day-7-the-sum-of-its-parts/: Cargo.toml
day-8-memory-maneuver/: Cargo.toml
day-9-marble-mania/: Cargo.toml
template/: Cargo.toml
(+24 files in other folders)
