[workspace]
members = [
    "day-1-chronal-calibration",
    "day-2-inventory-management-system",
    "day-3-no-matter-how-you-slice-it",
    "day-4-repose-record",
    "day-5-alchemical-reduction",
    "day-6-chronal-coordinates",
    "day-7-the-sum-of-its-parts",
    "day-8-memory-maneuver",
    "day-9-marble-mania",
    "day-10-the-stars-align",
    "day-11-chronal-charge",
    "day-12-subterranean-sustainability",
    "day-13-mine-cart-madness",
    "day-14-chocolate-charts",
]
